TP5/obj/ejemplo.output
Estado 22 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 2 reducción(ones)/reducción(ones)
Estado 40 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 147 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 152 conflictos: 3 reducción(ones)/reducción(ones)
Estado 159 conflictos: 4 desplazamiento(s)/reducción(ones)
Estado 160 conflictos: 29 desplazamiento(s)/reducción(ones)
Estado 233 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: '\n'
    4     | declaracionExterna '\n'
    5     | sentencia '\n'
    6     | error '\n'

    7 declaracion: especDeclaracion listaDeclaradoresBis ';'

    8 especDeclaracionBis: /* vacío */
    9                    | especDeclaracion

   10 especDeclaracion: CLASE_ALMACENAMIENTO especDeclaracionBis
   11                 | especTipo especDeclaracionBis

   12 listaDeclaradoresBis: /* vacío */
   13                     | listaDeclaradores

   14 listaDeclaradores: declarador
   15                  | listaDeclaradores ',' declarador

   16 declarador: decla
   17           | decla '=' inicializador

   18 inicializador: expAsignacion
   19              | '{' listaDeInicializadores '}'

   20 listaDeInicializadores: inicializador
   21                       | listaDeInicializadores ',' inicializador

   22 especTipo: TIPO_DATO
   23          | especStructUnion
   24          | ID

   25 especStructUnion: STRUCT_UNION ID opcionLista
   26                 | STRUCT_UNION '{' listaDeclaracionesStruct '}'

   27 listaDeclaracionesStruct: declaracionStruct
   28                         | listaDeclaracionesStruct declaracionStruct

   29 declaracionStruct: listaCalificadores declaradoresStruct ';'

   30 listaCalificadores: especTipo listaCalificadoresBis

   31 listaCalificadoresBis: /* vacío */
   32                      | listaCalificadores

   33 opcionLista: /* vacío */
   34            | '{' listaDeclaracionesStruct '}'

   35 declaradoresStruct: declaStruct
   36                   | declaradoresStruct ',' declaStruct

   37 declaStruct: decla
   38            | declaBis ':' expCondicional

   39 decla: puntero declaradorDirecto
   40      | declaradorDirecto

   41 declaBis: /* vacío */
   42         | decla

   43 declaradorDirecto: ID
   44                  | declaradorDirecto '[' expCondicionalBis ']'
   45                  | declaradorDirecto '(' listaTiposParametros ')'

   46 listaTiposParametros: listaParametros
   47                     | listaParametros ',' '.' '.' '.'

   48 listaTiposParametrosBis: /* vacío */
   49                        | listaTiposParametros

   50 listaParametros: declaracionParametro
   51                | listaParametros ',' declaracionParametro

   52 declaracionParametro: especDeclaracion decla
   53                     | especDeclaracion declaradorAbstracto

   54 nombreTipo: listaCalificadores declaradorAbstractoBis

   55 declaradorAbstracto: puntero declaradorAbstractoDirecto
   56                    | declaradorAbstractoDirecto
   57                    | puntero

   58 declaradorAbstractoBis: /* vacío */
   59                       | declaradorAbstracto

   60 declaradorAbstractoDirecto: '(' declaradorAbstracto ')'
   61                           | declaradorAbstractoDirecto opcionExpresion
   62                           | opcionExpresion

   63 opcionExpresion: '[' expCondicionalBis ']'
   64                | '(' listaTiposParametrosBis ')'

   65 sentencia: sentCompuesta
   66          | sentExpresion
   67          | sentSeleccion
   68          | sentIteracion
   69          | sentSalto
   70          | sentEtiquetada

   71 sentExpresion: exp ';'
   72              | ';'

   73 sentCompuesta: '{' decalracionOSentencia '}'

   74 decalracionOSentencia: /* vacío */
   75                      | decalracionOSentencia listaDeclaraciones
   76                      | decalracionOSentencia listaSentencias

   77 listaDeclaraciones: declaracionExterna
   78                   | listaDeclaraciones declaracionExterna

   79 listaDeclaracionesBis: /* vacío */
   80                      | listaDeclaraciones

   81 listaSentencias: sentencia
   82                | listaSentencias sentencia

   83 puntero: '*'
   84        | '*' puntero

   85 sentSeleccion: IF '(' exp ')' sentencia
   86              | IF '(' exp ')' sentencia ELSE sentencia
   87              | SWITCH '(' exp ')' sentencia

   88 sentIteracion: WHILE '(' exp ')' sentencia
   89              | DO sentencia WHILE '(' exp ')' ';'
   90              | FOR '(' expOp ';' expOp ';' expOp ')' sentencia

   91 sentEtiquetada: CASE expCondicional ':' sentencia
   92               | DEFAULT ':' sentencia
   93               | ID ':' sentencia

   94 sentSalto: RETURN expOp ';'
   95          | BREAK ';'
   96          | CONTINUE ';'
   97          | GOTO ID ';'

   98 expPrimaria: ID
   99            | ENTERO
  100            | REAL
  101            | CTE_CARACTER
  102            | LITERAL_CADENA
  103            | NULL1
  104            | '(' exp ')'

  105 exp: expAsignacion
  106    | exp ',' expAsignacion

  107 expOp: /* vacío */
  108      | exp

  109 expAsignacion: expCondicional
  110              | expUnaria operAsignacion expAsignacion

  111 expCondicional: expOr
  112               | expOr '?' exp ':' expCondicional

  113 expCondicionalBis: /* vacío */
  114                  | expCondicional

  115 operAsignacion: '='
  116               | ASIGNACION_INCREMENTO
  117               | ASIGNACION_DECREMENTO
  118               | ASIGNACION_PRODUCTO
  119               | ASIGNACION_DIVISION

  120 expOr: expAnd
  121      | expOr OR expAnd

  122 expAnd: expIgualdad
  123       | expAnd AND expIgualdad

  124 expIgualdad: expRelacional
  125            | expIgualdad IGUALDAD expRelacional
  126            | expIgualdad DESIGUALDAD expRelacional

  127 expRelacional: expAditiva
  128              | expRelacional '<' expAditiva
  129              | expRelacional '>' expAditiva
  130              | expRelacional MENORIGUAL expAditiva
  131              | expRelacional MAYORIGUAL expAditiva

  132 expAditiva: expMultiplicativa
  133           | expAditiva '+' expMultiplicativa
  134           | expAditiva '-' expMultiplicativa

  135 expMultiplicativa: expUnaria
  136                  | expMultiplicativa '*' expUnaria
  137                  | expMultiplicativa '/' expUnaria
  138                  | expMultiplicativa '%' expUnaria

  139 expUnaria: expSufijo
  140          | INCREMENTO expUnaria
  141          | DECREMENTO expUnaria
  142          | '-' expUnaria
  143          | '+' expUnaria
  144          | '~' expUnaria
  145          | '!' expUnaria
  146          | '&' expUnaria
  147          | puntero expUnaria
  148          | SIZEOF '(' expUnaria ')'
  149          | SIZEOF '(' nombreTipo ')'

  150 expSufijo: expPrimaria
  151          | expSufijo '[' exp ']'
  152          | expSufijo '(' listaArgumentos ')'
  153          | expSufijo '.' ID
  154          | expSufijo FLECHA ID
  155          | expSufijo INCREMENTO
  156          | expSufijo DECREMENTO

  157 listaArgumentos: /* vacío */
  158                | expAsignacion
  159                | listaArgumentos ',' expAsignacion

  160 declaracionExterna: definicionFuncion
  161                   | declaracion

  162 definicionFuncion: especDeclaracion decla listaDeclaracionesBis sentCompuesta


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5 6
'!' (33) 145
'%' (37) 138
'&' (38) 146
'(' (40) 45 60 64 85 86 87 88 89 90 104 148 149 152
')' (41) 45 60 64 85 86 87 88 89 90 104 148 149 152
'*' (42) 83 84 136
'+' (43) 133 143
',' (44) 15 21 36 47 51 106 159
'-' (45) 134 142
'.' (46) 47 153
'/' (47) 137
':' (58) 38 91 92 93 112
';' (59) 7 29 71 72 89 90 94 95 96 97
'<' (60) 128
'=' (61) 17 115
'>' (62) 129
'?' (63) 112
'[' (91) 44 63 151
']' (93) 44 63 151
'{' (123) 19 26 34 73
'}' (125) 19 26 34 73
'~' (126) 144
error (256) 6
REAL (258) 100
ENTERO (259) 99
LITERAL_CADENA (260) 102
OR (261) 121
AND (262) 123
IGUALDAD (263) 125
DESIGUALDAD (264) 126
MAYORIGUAL (265) 131
MENORIGUAL (266) 130
INCREMENTO (267) 140 155
DECREMENTO (268) 141 156
ASIGNACION_INCREMENTO (269) 116
ASIGNACION_DECREMENTO (270) 117
ASIGNACION_PRODUCTO (271) 118
ASIGNACION_DIVISION (272) 119
FLECHA (273) 154
IF (274) 85 86
ELSE (275) 86
SWITCH (276) 87
WHILE (277) 88 89
DO (278) 89
FOR (279) 90
RETURN (280) 94
CONTINUE (281) 96
BREAK (282) 95
CASE (283) 91
DEFAULT (284) 92
GOTO (285) 97
NULL1 (286) 103
TIPO_DATO (287) 22
CLASE_ALMACENAMIENTO (288) 10
STRUCT_UNION (289) 25 26
ID (290) 24 25 43 93 97 98 153 154
SIZEOF (291) 148 149
CTE_CARACTER (292) 101


No terminales con las reglas donde aparecen

$accept (61)
    en la izquierda: 0
input (62)
    en la izquierda: 1 2, en la derecha: 0 2
line (63)
    en la izquierda: 3 4 5 6, en la derecha: 2
declaracion (64)
    en la izquierda: 7, en la derecha: 161
especDeclaracionBis (65)
    en la izquierda: 8 9, en la derecha: 10 11
especDeclaracion (66)
    en la izquierda: 10 11, en la derecha: 7 9 52 53 162
listaDeclaradoresBis (67)
    en la izquierda: 12 13, en la derecha: 7
listaDeclaradores (68)
    en la izquierda: 14 15, en la derecha: 13 15
declarador (69)
    en la izquierda: 16 17, en la derecha: 14 15
inicializador (70)
    en la izquierda: 18 19, en la derecha: 17 20 21
listaDeInicializadores (71)
    en la izquierda: 20 21, en la derecha: 19 21
especTipo (72)
    en la izquierda: 22 23 24, en la derecha: 11 30
especStructUnion (73)
    en la izquierda: 25 26, en la derecha: 23
listaDeclaracionesStruct (74)
    en la izquierda: 27 28, en la derecha: 26 28 34
declaracionStruct (75)
    en la izquierda: 29, en la derecha: 27 28
listaCalificadores (76)
    en la izquierda: 30, en la derecha: 29 32 54
listaCalificadoresBis (77)
    en la izquierda: 31 32, en la derecha: 30
opcionLista (78)
    en la izquierda: 33 34, en la derecha: 25
declaradoresStruct (79)
    en la izquierda: 35 36, en la derecha: 29 36
declaStruct (80)
    en la izquierda: 37 38, en la derecha: 35 36
decla (81)
    en la izquierda: 39 40, en la derecha: 16 17 37 42 52 162
declaBis (82)
    en la izquierda: 41 42, en la derecha: 38
declaradorDirecto (83)
    en la izquierda: 43 44 45, en la derecha: 39 40 44 45
listaTiposParametros (84)
    en la izquierda: 46 47, en la derecha: 45 49
listaTiposParametrosBis (85)
    en la izquierda: 48 49, en la derecha: 64
listaParametros (86)
    en la izquierda: 50 51, en la derecha: 46 47 51
declaracionParametro (87)
    en la izquierda: 52 53, en la derecha: 50 51
nombreTipo (88)
    en la izquierda: 54, en la derecha: 149
declaradorAbstracto (89)
    en la izquierda: 55 56 57, en la derecha: 53 59 60
declaradorAbstractoBis (90)
    en la izquierda: 58 59, en la derecha: 54
declaradorAbstractoDirecto (91)
    en la izquierda: 60 61 62, en la derecha: 55 56 61
opcionExpresion (92)
    en la izquierda: 63 64, en la derecha: 61 62
sentencia (93)
    en la izquierda: 65 66 67 68 69 70, en la derecha: 5 81 82 85 86
    87 88 89 90 91 92 93
sentExpresion (94)
    en la izquierda: 71 72, en la derecha: 66
sentCompuesta (95)
    en la izquierda: 73, en la derecha: 65 162
decalracionOSentencia (96)
    en la izquierda: 74 75 76, en la derecha: 73 75 76
listaDeclaraciones (97)
    en la izquierda: 77 78, en la derecha: 75 78 80
listaDeclaracionesBis (98)
    en la izquierda: 79 80, en la derecha: 162
listaSentencias (99)
    en la izquierda: 81 82, en la derecha: 76 82
puntero (100)
    en la izquierda: 83 84, en la derecha: 39 55 57 84 147
sentSeleccion (101)
    en la izquierda: 85 86 87, en la derecha: 67
sentIteracion (102)
    en la izquierda: 88 89 90, en la derecha: 68
sentEtiquetada (103)
    en la izquierda: 91 92 93, en la derecha: 70
sentSalto (104)
    en la izquierda: 94 95 96 97, en la derecha: 69
expPrimaria (105)
    en la izquierda: 98 99 100 101 102 103 104, en la derecha: 150
exp (106)
    en la izquierda: 105 106, en la derecha: 71 85 86 87 88 89 104
    106 108 112 151
expOp (107)
    en la izquierda: 107 108, en la derecha: 90 94
expAsignacion (108)
    en la izquierda: 109 110, en la derecha: 18 105 106 110 158 159
expCondicional (109)
    en la izquierda: 111 112, en la derecha: 38 91 109 112 114
expCondicionalBis (110)
    en la izquierda: 113 114, en la derecha: 44 63
operAsignacion (111)
    en la izquierda: 115 116 117 118 119, en la derecha: 110
expOr (112)
    en la izquierda: 120 121, en la derecha: 111 112 121
expAnd (113)
    en la izquierda: 122 123, en la derecha: 120 121 123
expIgualdad (114)
    en la izquierda: 124 125 126, en la derecha: 122 123 125 126
expRelacional (115)
    en la izquierda: 127 128 129 130 131, en la derecha: 124 125 126
    128 129 130 131
expAditiva (116)
    en la izquierda: 132 133 134, en la derecha: 127 128 129 130 131
    133 134
expMultiplicativa (117)
    en la izquierda: 135 136 137 138, en la derecha: 132 133 134 136
    137 138
expUnaria (118)
    en la izquierda: 139 140 141 142 143 144 145 146 147 148 149, en la derecha:
    110 135 136 137 138 140 141 142 143 144 145 146 147 148
expSufijo (119)
    en la izquierda: 150 151 152 153 154 155 156, en la derecha: 139
    151 152 153 154 155 156
listaArgumentos (120)
    en la izquierda: 157 158 159, en la derecha: 152 159
declaracionExterna (121)
    en la izquierda: 160 161, en la derecha: 4 77 78
definicionFuncion (122)
    en la izquierda: 162, en la derecha: 160


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end                  desplazar e ir al estado 2
    error                 desplazar e ir al estado 3
    REAL                  desplazar e ir al estado 4
    ENTERO                desplazar e ir al estado 5
    LITERAL_CADENA        desplazar e ir al estado 6
    INCREMENTO            desplazar e ir al estado 7
    DECREMENTO            desplazar e ir al estado 8
    IF                    desplazar e ir al estado 9
    SWITCH                desplazar e ir al estado 10
    WHILE                 desplazar e ir al estado 11
    DO                    desplazar e ir al estado 12
    FOR                   desplazar e ir al estado 13
    RETURN                desplazar e ir al estado 14
    CONTINUE              desplazar e ir al estado 15
    BREAK                 desplazar e ir al estado 16
    CASE                  desplazar e ir al estado 17
    DEFAULT               desplazar e ir al estado 18
    GOTO                  desplazar e ir al estado 19
    NULL1                 desplazar e ir al estado 20
    TIPO_DATO             desplazar e ir al estado 21
    CLASE_ALMACENAMIENTO  desplazar e ir al estado 22
    STRUCT_UNION          desplazar e ir al estado 23
    ID                    desplazar e ir al estado 24
    SIZEOF                desplazar e ir al estado 25
    CTE_CARACTER          desplazar e ir al estado 26
    '+'                   desplazar e ir al estado 27
    '-'                   desplazar e ir al estado 28
    '*'                   desplazar e ir al estado 29
    '('                   desplazar e ir al estado 30
    '\n'                  desplazar e ir al estado 31
    ';'                   desplazar e ir al estado 32
    '{'                   desplazar e ir al estado 33
    '~'                   desplazar e ir al estado 34
    '!'                   desplazar e ir al estado 35
    '&'                   desplazar e ir al estado 36

    line                ir al estado 37
    declaracion         ir al estado 38
    especDeclaracion    ir al estado 39
    especTipo           ir al estado 40
    especStructUnion    ir al estado 41
    sentencia           ir al estado 42
    sentExpresion       ir al estado 43
    sentCompuesta       ir al estado 44
    puntero             ir al estado 45
    sentSeleccion       ir al estado 46
    sentIteracion       ir al estado 47
    sentEtiquetada      ir al estado 48
    sentSalto           ir al estado 49
    expPrimaria         ir al estado 50
    exp                 ir al estado 51
    expAsignacion       ir al estado 52
    expCondicional      ir al estado 53
    expOr               ir al estado 54
    expAnd              ir al estado 55
    expIgualdad         ir al estado 56
    expRelacional       ir al estado 57
    expAditiva          ir al estado 58
    expMultiplicativa   ir al estado 59
    expUnaria           ir al estado 60
    expSufijo           ir al estado 61
    declaracionExterna  ir al estado 62
    definicionFuncion   ir al estado 63


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    6 line: error . '\n'

    '\n'  desplazar e ir al estado 64


estado 4

  100 expPrimaria: REAL .

    $default  reduce usando la regla 100 (expPrimaria)


estado 5

   99 expPrimaria: ENTERO .

    $default  reduce usando la regla 99 (expPrimaria)


estado 6

  102 expPrimaria: LITERAL_CADENA .

    $default  reduce usando la regla 102 (expPrimaria)


estado 7

  140 expUnaria: INCREMENTO . expUnaria

    REAL            desplazar e ir al estado 4
    ENTERO          desplazar e ir al estado 5
    LITERAL_CADENA  desplazar e ir al estado 6
    INCREMENTO      desplazar e ir al estado 7
    DECREMENTO      desplazar e ir al estado 8
    NULL1           desplazar e ir al estado 20
    ID              desplazar e ir al estado 65
    SIZEOF          desplazar e ir al estado 25
    CTE_CARACTER    desplazar e ir al estado 26
    '+'             desplazar e ir al estado 27
    '-'             desplazar e ir al estado 28
    '*'             desplazar e ir al estado 29
    '('             desplazar e ir al estado 30
    '~'             desplazar e ir al estado 34
    '!'             desplazar e ir al estado 35
    '&'             desplazar e ir al estado 36

    puntero      ir al estado 45
    expPrimaria  ir al estado 50
    expUnaria    ir al estado 66
    expSufijo    ir al estado 61


estado 8

  141 expUnaria: DECREMENTO . expUnaria
